<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/story_edit_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/story_edit_title"
        android:textSize="32sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top|center_horizontal"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/random_word_one_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/random_word_one_hint"
            android:inputType="text" />

        <Button
            android:id="@+id/noun_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/noun_button" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top|center_horizontal"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/random_word_two_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/random_word_two_hint"
            android:inputType="text" />

        <Button
            android:id="@+id/verb_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verb_button" />
    </LinearLayout>

    <!-- Adjective: future release 
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top|center_horizontal"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/random_word_three_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/random_word_three_hint"
            android:inputType="text" />

        <Button
            android:id="@+id/adjective_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adjective_button" />
    </LinearLayout>
    -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top|center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/done_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/done" />
    </LinearLayout>

</LinearLayout>